--- a/njp/templates/njp/tags.html
+++ b/njp/templates/njp/tags.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="tags-container">
-        <div class="alltags-text">Все тэги</div>
+        <div class="all-tags-text">Все тэги</div>
 
         <form class="tags" action="" method="get">
             <input name="s" placeholder="Поиск..." type="search">
