--- a/njp/templates/njp/index.html
+++ b/njp/templates/njp/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="img-tag-list">
                     {% for tag in pic.tags.all %}
-                        <div class="imgtag">#{{ tag.name }}</div>
+                        <div class="imgtag" onclick="openTag('{{ tag.name }}')">#{{ tag.name }}</div>
                     {% endfor %}
                 </div>
             </div>
@@ -73,6 +73,10 @@
             } else {
                 document.querySelector('.clear-tags-btn').style.display = 'none';
             }
+
+        function openTag(tagName) {
+            window.location.href = `/?tags=${tagName}`;
+        }
     </script>
 
 {% endblock %}
