pic: added template, detail view, url, fixed css. fixed hardcoded urls

--- a/njp/templates/njp/base.html
+++ b/njp/templates/njp/base.html
@@ -20,7 +20,7 @@
 
 <script>
     function toHome() {
-        window.location.href = `/`;
+        window.location.href = "{% url 'index' %}";
     }
 </script>
 
