--- a/njp/static/njp/css/styles.css
+++ b/njp/static/njp/css/styles.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     align-items: center;
     z-index: 100;
+    margin-bottom: 10px;
 }
 
 .name {
@@ -318,4 +319,45 @@ button:before {
     background-color: #a4a3a3;
     transition: all 50ms ease;
 }
+.main-image-box {
+    padding-top:60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
+}
+.pic-box {
+    height: 600px;
+    background-color: aqua;
+    margin: auto;
+    margin-bottom: 2px;
+    display: flex;
+}
+.pic-box img {
+    height: 100%;
+    margin: auto;
+    align-items: center
+}
+.downld-text {
+    font-family: 'Tektur', sans-serif;
+    font-weight: 200;
+    font-size: 20px;
+    color: #8c8c8c;
+    margin: auto;
+    margin-bottom: 10px;
+    text-decoration: underline;
+}
+.id-text {
+    font-family: 'Tektur', sans-serif;
+    font-weight: 200;
+    font-size: 30px;
+    color: #8c8c8c;
+    margin: auto;
+    margin-bottom: 10px;
+}
+.img-tag-list-main {
+    margin-top: 3px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
