--- a/njp/templates/njp/index.html
+++ b/njp/templates/njp/index.html
@@ -3,7 +3,7 @@
     <div class="left-bar">
         <div class="popular-tags">Популярные тэги</div>
         <form action="" method="get">
-            <input name="s" placeholder="Поиск..." type="search">
+            <input id="search-input" name="s" placeholder="Поиск..." type="search">
             <button type="submit"></button>
         </form>
         <div class="open-tags-page-btn" onclick="toAllTags()">Показать все</div>
@@ -14,11 +14,11 @@
                         #{{ tag.name }}[{{ tag.pic_count }}]
                     </div>
                 {% else %}
-                    <div class="tag" data-tag-name="{{ tag.name }}" onclick="toggleTag(this)">#{{ tag.name }}</div>
+                    <div class="tag" data-tag-name="{{ tag.name }}" onclick="toggleTag(this)">
+                        #{{ tag.name }}</div>
                 {% endif %}
             {% endfor %}
         </div>
-
         <div class="show-selected-btn" onclick="showSelectedTags()" style="display: none">Показать выбранное</div>
         <div class="clear-tags-btn" onclick="clearTags()" style="display: none">Cбросить</div>
     </div>
@@ -27,7 +27,7 @@
         {% for pic in pics_list %}
             <div class="pic">
                 <div class="pic-overlay">
-                    <div class="pic-overlay-text">ОТКРЫТЬ</div>
+                    <div class="pic-overlay-text"><a href="{{pic.get_absolute_url}}">ОТКРЫТЬ</a></div>
                 </div>
                 <div class="image-box">
                     <img class="pic-img" src="{{ pic.photo.url }}">
@@ -66,7 +66,7 @@
         }
 
         function clearTags() {
-            window.location.href = `/`;
+            window.location.href = '{% url 'index' %}';
         }
 
         if (window.location.href.includes("?tags=")) {
@@ -80,8 +80,7 @@
         }
 
         function toAllTags() {
-            window.location.href = `/tags`;
+            window.location.href = '{% url 'tags' %}';
         }
     </script>
-
 {% endblock %}
