--- a/njp/templates/njp/show_pic.html
+++ b/njp/templates/njp/show_pic.html
@@ -5,7 +5,7 @@
     <div class="pic-box">
         <img class="pic-img" src="{{ pic.photo.url }}">
     </div>
-    <div class="img-tag-list-main">
+    <div class="img-tag-list">
         {% for tag in pic.tags.all %}
         <div class="imgtag">#{{ tag.name }}</div>
         {% endfor %}
