--- a/njp/templates/njp/index.html
+++ b/njp/templates/njp/index.html
@@ -2,9 +2,9 @@
 {% block content %}
     <div class="left-bar">
         <div class="popular-tags">Популярные тэги</div>
-        <form action="" method="get">
+        <form autocomplete="off" action="" method="get">
             <input id="search-input" name="s" placeholder="Поиск..." type="search">
-            <button type="submit"></button>
+            <div class="loopa"></div>
         </form>
         <div class="open-tags-page-btn" onclick="toAllTags()">Показать все</div>
         <div class="tag-box">
