--- a/njp/templates/njp/tags.html
+++ b/njp/templates/njp/tags.html
@@ -4,7 +4,7 @@
     <div class="tags-container">
         <div class="all-tags-text">Все тэги</div>
 
-        <form class="tags" action="" method="get">
+        <form class="tags-search-bar" action="" method="get">
             <input name="s" placeholder="Поиск..." type="search">
             <button type="submit"></button>
         </form>
