--- a/njp/static/njp/css/styles.css
+++ b/njp/static/njp/css/styles.css
@@ -89,7 +89,7 @@ form {
     margin-right: auto;
 }
 
-form.tags {
+form.tags-search-bar {
     position: relative;
     width: 15%;
     margin-top: 10px;
@@ -333,7 +333,6 @@ input {
 
 .pic-box {
     height: 600px;
-    background-color: aqua;
     margin: auto auto 2px;
     display: flex;
 }
