added loading pictures ability

--- a/njp/static/njp/css/styles.css
+++ b/njp/static/njp/css/styles.css
@@ -15,7 +15,10 @@ body {
     z-index: 100;
     margin-bottom: 10px;
 }
-
+a.download-pic{
+    text-decoration: inherit;
+    color:inherit;
+}
 .name {
     font-family: 'Tektur', sans-serif;
     font-weight: 800;
