add_pic.html extends base.html added thumb_nail field for model pic

--- a/njp/templates/njp/add_pic.html
+++ b/njp/templates/njp/add_pic.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Загрузка картинки</title>
-</head>
-<body>
+{% extends 'njp/base.html' %}
+{% block content %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Загрузить</button>
 </form>
-</body>
-</html>
+{% endblock %}
+
