--- a/njp/static/njp/css/styles.css
+++ b/njp/static/njp/css/styles.css
@@ -88,6 +88,7 @@ form {
     width: 80%;
     max-width: 300px;
     margin-top: 10px;
+    padding-top:50px;
     margin-left: auto;
     margin-right: auto;
 }
