--- a/njp/templates/njp/index.html
+++ b/njp/templates/njp/index.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="left-bar">
         <div class="popular-tags">Популярные тэги</div>
-        <form autocomplete="off" action="" method="get">
+        <form class="tags-search" autocomplete="off" action="" method="get">
             <input id="search-input" name="s" placeholder="Поиск..." type="search">
             <div class="loopa"></div>
         </form>
