--- a/njp/templates/njp/tags.html
+++ b/njp/templates/njp/tags.html
@@ -4,7 +4,7 @@
     <div class="tags-container">
         <div class="all-tags-text">Все тэги</div>
 
-        <form autocomplete="off" action="" method="get">
+        <form class="tags-search" autocomplete="off" action="" method="get">
             <input id="search-input" name="s" placeholder="Поиск..." type="search">
             <div class="loopa"></div>
         </form>
